<resources>
    <string name="app_name">Time Management</string>
    <string name="enter_name">Enter your name</string>
    <string name="next">Next</string>
    <string name="activity">Activity</string>
    <string name="stats">Stats</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="greet">Good Morning</string>
    <string name="greet_afternoon">Good Afternoon</string>
    <string name="greet_evening">Good Evening</string>
    <string name="greet_night">Good Night</string>
    <string name="today">TODAY</string>
    <string name="date">15 Jan, 2020</string>
    <string name="name">John</string>
    <string name="no_activity">No Activity</string>
    <string name="name_required">Please input your name</string>
    <string name="add_activities">ADD ACTIVITIES</string>
    <string name="enter_activities">Enter Activities</string>
    <string name="select_type">Select Type</string>
    <string name="soft">Soft</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="activity_progress">Activity In Progress</string>
    <string name="activity_name">Create UI/UX Design</string>
    <string name="type">Type</string>
    <string name="start_at">Start At</string>
    <string name="start_at_09">09:30:02</string>
    <string name="duration">Duration</string>
    <string name="_00_45">00:45</string>
    <string name="end_activity">End Activity</string>
    <string name="is_empty">Please enter activity name</string>
    <string name="timer">00:00</string>
    <string name="duration_minutes">60 Minutes</string>
    <string name="end_at">End At</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="exit_message">Are you sure you want to exit and cancel this activity ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="history_activity">History Activity</string>
    <string name="delete_title">Delete All</string>
    <string name="delete_message">Are you sure you want to delete all activity ?</string>
    <string name="reminder">Reminder At 06.00 AM</string>
    <string name="notification">notification</string>
    <string name="lang">English</string>
    <string name="lang_title">Change Language</string>
    <string name="notification_text">Let\'s go back into your productivity</string>
    <string name="translate">translate</string>
    <string name="reminder_off">Reminder is turn off</string>
    <string name="reminder_on">Reminder is set at 06.00 AM</string>
    <string name="daily">Daily</string>
    <string name="all">All</string>
    <string name="activity_has_end">Activity has been end</string>
    <string name="no_data">No Data</string>
    <string name="activity_list">Activity List</string>
    <string name="statistic">Statistic</string>
    <string name="time_usage">Time usage :</string>
    <string name="total">Total time activity :</string>
    <string name="max_length">Max Length 50 Character</string>
</resources>