<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/label_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/m_semi_bold"
        android:text="@string/activity"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_activity_name_dialog"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_activity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/m_regular"
        android:gravity="center"
        android:text="@string/activity_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/label_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_activity_name_dialog"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/m_semi_bold"
        android:text="@string/type"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_activity_type_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_type"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/m_regular"
        android:text="@string/soft"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/label_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_activity_type_dialog"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/m_semi_bold"
        android:text="@string/start_at"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_start_at_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_start"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/m_regular"
        android:text="@string/start_at_09"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/label_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_start_at_dialog"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/m_semi_bold"
        android:text="@string/end_at"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_end_at_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_end"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/m_regular"
        android:text="@string/start_at_09"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/label_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_end_at_dialog"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/m_semi_bold"
        android:text="@string/duration"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_duration_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_duration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/m_regular"
        android:text="@string/_00_45"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_duration_dialog"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/m_semi_bold"
        android:text="@string/close"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

</RelativeLayout>