<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".view.fragment.stats.DailyFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.anychart.AnyChartView
            android:id="@+id/pie_chart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/img_no_stats"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:contentDescription="@string/no_activity"
            android:src="@drawable/empty" />

        <TextView
            android:id="@+id/txt_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_no_stats"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/m_regular"
            android:text="@string/no_data"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/label_usage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pie_chart"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/m_semi_bold"
            android:text="@string/time_usage"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_time_usage_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_usage"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/m_semi_bold"
            android:text="@string/time_usage"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_time_usage_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_usage"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/txt_time_usage_name"
            android:fontFamily="@font/m_semi_bold"
            android:text="@string/time_usage"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_time_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_time_usage_name"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/m_semi_bold"
            android:text="@string/total"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/img_stats"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@id/txt_time_total"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:src="@drawable/stats"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

</ScrollView>